other/require-reasonable-pdbs/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-reasonable-pdbs
status:
  ready: true
