other/require-reasonable-pdbs/.kyverno-test/pdb-maxUnavailable-bad.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-maxUnavailable-pdb01
spec:
  maxUnavailable: 49%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-maxUnavailable-pdb02
spec:
  maxUnavailable: 40%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-maxUnavailable-pdb03
spec:
  maxUnavailable: 30%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-maxUnavailable-pdb04
spec:
  maxUnavailable: 20%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-maxUnavailable-pdb05
spec:
  maxUnavailable: 10%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-maxUnavailable-pdb06
spec:
  maxUnavailable: 0%
  selector:
    matchLabels:
      foo: bar
---
