other/require-reasonable-pdbs/.kyverno-test/pdb-minAvailable-good.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-minAvailable-pdb01
spec:
  minAvailable: 50%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-minAvailable-pdb02
spec:
  minAvailable: 40%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-minAvailable-pdb03
spec:
  minAvailable: 30%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-minAvailable-pdb04
spec:
  minAvailable: 20%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-minAvailable-pdb05
spec:
  minAvailable: 10%
  selector:
    matchLabels:
      foo: bar
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-minAvailable-pdb06
spec:
  minAvailable: 1%
  selector:
    matchLabels:
      foo: bar
---
