other/require-reasonable-pdbs/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-reasonable-pdbs
spec:
  steps:
  - name: 01 - Create policy and set to Enforce
    try:
    - apply:
        file: ../require-reasonable-pdbs.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: require-reasonable-pdbs
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: 02 - Create PDBs
    try:
    - apply:
        file: ../.kyverno-test/pdb-maxUnavailable-good.yaml
    - apply:
        file: ../.kyverno-test/pdb-minAvailable-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ../.kyverno-test/pdb-maxUnavailable-bad.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ../.kyverno-test/pdb-minAvailable-bad.yaml
